# website-generator

./: .gitignore  Dockerfile  README.md  TRD.md  main.py  pyproject.toml  test_main.py
test_output/: example.js
tests/: __init__.py  test_file_handling.py  test_main.py
utils/: __init__.py  file_handling.py  git_operations.py  github_api.py
